src/test/ui/union/union-repr-c.stderr
error: `extern` block uses type `W`, which is not FFI-safe
  --> $DIR/union-repr-c.rs:15:22
   |
LL |     static FOREIGN2: W;
   |                      ^ not FFI-safe
   |
note: lint level defined here
  --> $DIR/union-repr-c.rs:2:9
   |
LL | #![deny(improper_ctypes)]
   |         ^^^^^^^^^^^^^^^
   = help: consider adding a `#[repr(C)]` or `#[repr(transparent)]` attribute to this union
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
=======
   = note: this union has unspecified layout
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
note: type defined here
  --> $DIR/union-repr-c.rs:9:1
   |
LL | / union W {
LL | |     a: u8,
LL | | }
   | |_^

error: aborting due to previous error

